--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "test:e2e": "jest --config ./test/jest-e2e.json",
         "migration:generate": "ts-node node_modules/typeorm/cli.js migration:generate --config ./orm.config.json --name",
         "migration:run": "ts-node node_modules/typeorm/cli.js migration:run --config ./orm.config.json",
-        "migration:revert": "ts-node node_modules/typeorm/cli.js migration:reverte --config ./orm.config.json"
+        "migration:revert": "ts-node node_modules/typeorm/cli.js migration:revert --config ./orm.config.json"
     },
     "dependencies": {
         "@nestjs/common": "^8.0.0",
