added upload files to firebase storage and related to avatars user

--- a/.env.sample
+++ b/.env.sample
@@ -4,3 +4,5 @@ USERNAME=postgres
 PASSWORD=password
 DATABASE=bookstore
 JWT_SECRET=secret
+STORAGE_BUCKET=gs:/appname.appspot.com
+PRIVATE_KEY_ID=1234
