--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         "migration:revert": "ts-node node_modules/typeorm/cli.js migration:revert --config ./orm.config.json"
     },
     "dependencies": {
+        "@firebase/app": "^0.7.16",
+        "@firebase/storage": "^0.9.2",
         "@nestjs/common": "^8.0.0",
         "@nestjs/core": "^8.0.0",
         "@nestjs/jwt": "^8.0.0",
@@ -31,6 +33,7 @@
         "@nestjs/platform-express": "^8.0.0",
         "@nestjs/swagger": "^5.1.5",
         "@nestjs/typeorm": "^8.0.2",
+        "@types/uuid": "^8.3.4",
         "bcryptjs": "^2.4.3",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.13.2",
@@ -43,7 +46,8 @@
         "rxjs": "^7.2.0",
         "swagger-ui-express": "^4.3.0",
         "ts-mapper": "^1.2.4",
-        "typeorm": "^0.2.41"
+        "typeorm": "^0.2.41",
+        "uuid": "^8.3.2"
     },
     "devDependencies": {
         "@nestjs/cli": "^8.0.0",
@@ -53,6 +57,7 @@
         "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.13",
         "@types/jest": "27.0.2",
+        "@types/multer": "^1.4.7",
         "@types/node": "^16.0.0",
         "@types/passport": "^1.0.7",
         "@types/passport-jwt": "^3.0.6",
